@@ -349,6 +349,11 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP4100 (EXPERIMENTAL)
        Canon PIXMA iP5000 (EXPERIMENTAL)
        Canon PIXMA MP600
+       Canon PIXMA MP750
+       Canon PIXMA MP760
+       Canon PIXMA MP770
+       Canon PIXMA MP780
+       Canon PIXMA MP790
        Canon PIXMA MP970
 
        *1: for compatibility, the original printers are named with
